@@ -1,35 +1,59 @@
-package client;
+package server;
 
+import java.util.List;
 import java.util.Arrays;
+import client.User;
 
 public class Parser {
+	protected static final List<String> usernames = Arrays.asList("Aaron", "Amir", "Dom", "Elvin");
+	protected static final List<String> passwords = Arrays.asList("1","2","3","4");
+	protected static final List<Integer> balances = Arrays.asList(100,200,300,400);
+	protected List<User> users = Arrays.asList(null, null, null, null);
+	protected List<User> spectators = Arrays.asList(null, null, null, null, null);
 
-	protected static final java.util.List<String> usernames = 
-			Arrays.asList("bob", "bill", "jack", "kane","master","fahim");
-	protected static final java.util.List<String> passwords = 
-			Arrays.asList("passw0rd", "john", "bone", "cage","theKing","brad");
-	protected User p1 = null;
-	protected User p2 = null;
+	Parser() { }
 
-	public void setP1(User user) {
-		p1 = user; // bind
+	// testing
+	public Parser(User p0, User p1, User p2, User p3) {
+		this.users = Arrays.asList(p0, p1, p2, p3);
 	}
 
-	public void setP2(User user) {
-		p2 = user; // bind
+	public int setUser(String auth) {
+		for(int i = 0; i < users.size(); i++) {
+			if(users.get(i)==null) {
+				users.set(i, this.getUserInfo(auth.trim().split(";")[0]));
+				return i;
+			}
+			if(i==2) {
+				// room is full because we are only supporting 2 players
+				return -1;
+			}
+		}
+		return -1;
+	}
+
+	public User getUserInfo(String username) {
+		int i = usernames.indexOf(username);
+		return new User(usernames.get(i), balances.get(i));
+	}
+
+	public List<User> getUsers() {
+		return users; // bind
 	}
 	
 	//To be used only by client
 	//Takes the string to update all players balances
 	//String will look like *P1USERNAME~P1BALANCE;P2USERNAME~P2BALANCE
+
+	// probably won't be used
 	public void playerSet(String input) {
 		String[] playerState = input.split(";");
 		String[] p1State = playerState[0].split("~");
 		String[] p2State = playerState[1].split("~");
-		p1.username = p1State[0];
-		p1.balance = Integer.parseInt(p1State[1]);
-		p2.username = p2State[0];
-		p2.balance = Integer.parseInt(p2State[1]);
+		this.users.get(0).username = p1State[0];
+		this.users.get(0).balance = Integer.parseInt(p1State[1]);
+		this.users.get(1).username = p2State[0];
+		this.users.get(1).balance = Integer.parseInt(p2State[1]);
 	}
 
 	//sent in from the server
@@ -53,8 +77,8 @@ public class Parser {
 		String[] messSeperate = input.split(":");
 		String[] playerState = messSeperate[0].split(";"); //Split into playerturn dealer p1 p2 and chatbox
 		String[] dealer = playerState[1].split("~"); //splits the dealer,p1, and p2 into score and cards
-		String[] p1State = playerState[2].split("~");
-		String[] p2State = playerState[3].split("~");
+		String[] p0State = playerState[2].split("~");
+		String[] p1State = playerState[3].split("~");
 		
 		
 		
@@ -75,32 +99,32 @@ public class Parser {
 		
 		//player one turn set
 		
-		if(!p1State[0].trim().isEmpty()) {
-			p1.bet = Integer.parseInt(p1State[0]);
+		if(!p0State[0].trim().isEmpty()) {
+			this.users.get(0).bet = Integer.parseInt(p0State[0]);
 		}
-		if(!p1State[1].trim().isEmpty()) {
-			p1.score = Integer.parseInt(p1State[1]);
-		}if(!p1State[2].trim().isEmpty()) {
-			p1.cards.add(p1State[2]);
-		}if(!p1State[3].trim().isEmpty()) {
-			p1.username = p1State[3];
-		}if(!p1State[4].trim().isEmpty()) {
-			p1.balance = Integer.parseInt(p1State[4]);
+		if(!p0State[1].trim().isEmpty()) {
+			this.users.get(0).score = Integer.parseInt(p0State[1]);
+		}if(!p0State[2].trim().isEmpty()) {
+			this.users.get(0).cards.add(p0State[2]);
+		}if(!p0State[3].trim().isEmpty()) {
+			this.users.get(0).username = p0State[3];
+		}if(!p0State[4].trim().isEmpty()) {
+			this.users.get(0).balance = Integer.parseInt(p0State[4]);
 		}
 		
 		
 		//Player 2 turn set
-		if(!p2State[0].trim().isEmpty()) {
-			p2.bet = Integer.parseInt(p2State[0]);
+		if(!p1State[0].trim().isEmpty()) {
+			this.users.get(1).bet = Integer.parseInt(p1State[0]);
 		}
-		if(!p2State[1].trim().isEmpty()) {
-			p2.score = Integer.parseInt(p2State[1]);
-		}if(!p2State[2].trim().isEmpty()) {
-			p2.cards.add(p2State[2]);
-		}if(!p2State[3].trim().isEmpty()) {
-			p2.username = p2State[3];
-		}if(!p2State[4].trim().isEmpty()) {
-			p2.balance = Integer.parseInt(p2State[4]);
+		if(!p1State[1].trim().isEmpty()) {
+			this.users.get(1).score = Integer.parseInt(p1State[1]);
+		}if(!p1State[2].trim().isEmpty()) {
+			this.users.get(1).cards.add(p1State[2]);
+		}if(!p1State[3].trim().isEmpty()) {
+			this.users.get(1).username = p1State[3];
+		}if(!p1State[4].trim().isEmpty()) {
+			this.users.get(1).balance = Integer.parseInt(p1State[4]);
 		}
 		
 		//messages set
@@ -116,15 +140,13 @@ public class Parser {
 	//bob- hi eve
 
 	//Takes in username and password and checks if its correct
-	public int authenticate(String input) {
-		String[] loginInfo = input.split(";");
+	public boolean authenticate(String input) {
+		String[] loginInfo = input.trim().split(";");
 		if(usernames.contains(loginInfo[0])) {
 			int index = usernames.indexOf(loginInfo[0]);
-			if(passwords.get(index).equals(loginInfo[1])) {
-				return 0;
-			}
+			return passwords.get(index).equals(loginInfo[1]);
 		}
-		return 1;
+		return false;
 	}
 
 	//taken in by the server and changes state on the server side
@@ -132,23 +154,23 @@ public class Parser {
 	public void actionTaken(String input) {
 
 		String[] action = input.split(";");
-		if(p1==null) {
+		if(this.users.get(0)==null) {
 			if(action[0].equalsIgnoreCase("j")) {
-				p1.username = action[2];
+				this.users.get(0).username = action[2];
 			}
 			return;
 
-		}else if(p2==null) {
+		}else if(this.users.get(1)==null) {
 			if(action[0].equalsIgnoreCase("j")) {
-				p2.username = action[2];
+				this.users.get(1).username = action[2];
 			}
 			return;
 		}else if (action[0].equalsIgnoreCase("j")) {
 			return;
 		}
-		User temp = p2;
-		User other = p1;
-		if(p1.username.equals(action[2])) { temp = p1;other=p2; }
+		User temp = this.users.get(1);
+		User other = this.users.get(0);
+		if(this.users.get(0).username.equals(action[2])) { temp = this.users.get(0);other=this.users.get(1); }
 
 		if(action[0].equalsIgnoreCase("h")) {
 			//CALCULATE THE CARD VALUE
@@ -169,8 +191,8 @@ public class Parser {
 	public static void main(String args[]) {
 		Parser test = new Parser();
 		test.turnSet(" ; ~ ; ~20~AD~ ~ ; ~12~A2~ ~ :I hate my life:hfegfhewjfhjwe");
-		System.out.println(test.p1.cards.getFirst());
-		System.out.println(test.p1.score);
+		System.out.println(test.users.get(0).cards.getFirst());
+		System.out.println(test.users.get(0).score);
 		//; ; ;
 //		test.actionTaken("H;i hate everyone here;jack");
 //		System.out.println(User.chatbox.getLast());
